HelloWorld/force-app/main/default/objects/Subject__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>SubNo-{000000}</displayFormat>
    <label>Subject Name</label>
    <type>AutoNumber</type>
</CustomField>