HelloWorld/force-app/main/default/objects/Subject__c/fields/Paper1__c.field-meta.xml
<CustomField>
    <fullName>Paper1__c</fullName>
    <label>Paper1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>