HelloWorld/force-app/main/default/objects/Subject__c/fields/Paper2__c.field-meta.xml
<CustomField>
    <fullName>Paper2__c</fullName>
    <label>Paper2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MATHAMATICS</fullName>
            </value>
            <value>
                <fullName>ENGLISH</fullName>
            </value>
            <value>
                <fullName>STATISTICS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>